# streamtex-design

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
streamtex_design/: __init__.py  _pack_manifest.toml
streamtex_design/components/: __init__.py  api_reference_card.py  callout.py  card_grid.py  categorized_grid.py  cite.py  comparison_table.py  composite_block.py  evidence_insight.py  exercise_flow.py  feature_walkthrough.py  inline_emphasis.py  manual_section.py  narrative_transition.py  slide_heading.py  stat_hero.py  takeaways.py  term_definition_list.py  title_slide.py  transition_gse.py
streamtex_design/design_systems/: __init__.py
streamtex_design/design_systems/default/: __init__.py
streamtex_design/design_systems/modern_dark/: __init__.py
streamtex_design/design_systems/modern_light/: __init__.py
streamtex_design/kits/: core.toml  course-default.toml  manual-default.toml  minimal.toml  project-default.toml  slides-modern-dark.toml
tests/: test_components.py  test_design_systems.py  test_kits.py  test_pack.py
